--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 					<textarea data-template>
 ## [【茨城県立歴史館】歴史博物館・文書館](https://rekishikan-ibk.jp/)
 
+
+<img class="qrcode_202405291711.png" src="IMG_7206.JPG"  alt="URL" height="300" >
 藤女子大学文学部文化総合学科4年
 
 2115083　森菜々美（もりななみ）
